<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="?attr/colorPrimary"
    android:layout_height="match_parent"
    tools:context="com.example.ozinshe.presentation.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar_profile"
            layout="@layout/toolbar_back_exit_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:src="@drawable/icon_profile_users"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_profile" />

        <TextView
            android:id="@+id/profileTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/sf_bold"
            android:text="@string/profile_my_profile"
            android:textAlignment="center"
            android:textColor="?attr/textAppearanceBody1"
            android:textFontWeight="700"
            android:textSize="24dp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageProfile" />

        <TextView
            android:id="@+id/tvUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/sf_regular"
            android:text="ali@gmail.com"
            android:textAlignment="center"
            android:textColor="@color/grey_400"
            android:textFontWeight="400"
            android:textSize="14dp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileTitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvUserEmail">

            <LinearLayout
                android:id="@+id/btnUserDataEdit"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_medium"
                    android:text="@string/profile_personal_data"
                    android:textColor="?attr/colorTertiary"
                    android:textFontWeight="500"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="14dp"
                    android:fontFamily="@font/sf_bold"
                    android:text="@string/profile_edit_personal_info"
                    android:textColor="@color/grey_400"
                    android:textFontWeight="600"
                    android:textSize="12dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_button_next" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/ViewColor"
                android:backgroundTint="@color/grey_300"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/btnChangePassword"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_medium"
                    android:text="@string/profile_change_password"
                    android:textColor="?attr/colorTertiary"
                    android:textFontWeight="500"
                    android:textSize="16dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_button_next" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/ViewColor"
                android:backgroundTint="@color/grey_300"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/btnChangeLanguage"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_medium"
                    android:text="@string/profile_language"
                    android:textColor="?attr/colorTertiary"
                    android:textFontWeight="500"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tvSelectedLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="14dp"
                    android:fontFamily="@font/sf_bold"
                    android:text="Қазақша"
                    android:textColor="@color/grey_400"
                    android:textFontWeight="600"
                    android:textSize="12dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_button_next" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/ViewColor"
                android:backgroundTint="@color/grey_300"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/btnPrivacyApp"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_medium"
                    android:text="@string/profile_policy"
                    android:textColor="?attr/colorTertiary"
                    android:textFontWeight="500"
                    android:textSize="16dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_button_next" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/ViewColor"
                android:backgroundTint="@color/grey_300"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/ViewColor"
                android:backgroundTint="@color/grey_300"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/btnNightModeSwift"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_medium"
                    android:text="@string/profile_light_dark_mode"
                    android:textColor="?attr/colorTertiary"
                    android:textFontWeight="500"
                    android:textSize="16dp" />

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/SwitchDayNight"
                    android:layout_width="67dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center_vertical"
                    android:checked="false"
                    android:layout_marginEnd="-10dp"
                    style="@style/CustomSwitchButton"
                    app:kswBackColor="?attr/SwitchThemeButton"
                    app:kswThumbColor="@color/white" 
                    app:thumbTint="@color/primary_300"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/ViewColor"
                android:backgroundTint="@color/grey_300"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>